# alpaca-cpp

./: .clang-format  .env.example  .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/: Config.cmake  alpaca-cpp-config.cmake.in
docs/: architecture.md
examples/: broker_account_management.cpp  get_account.cpp  get_market_data.cpp  list_positions.cpp  options_example.cpp  place_order.cpp  watchlist_management.cpp  websocket_streaming.cpp
include/alpaca/broker/: client.hpp  enums.hpp  models.hpp  requests.hpp
include/alpaca/common/: enums.hpp
include/alpaca/core/: config.hpp  dotenv.hpp  factory.hpp  http_transport.hpp  json.hpp  mock_http_transport.hpp
include/alpaca/core/http/: beast_transport.hpp
include/alpaca/data/: client.hpp  enums.hpp  models.hpp  requests.hpp  timeframe.hpp
include/alpaca/data/live/: crypto.hpp  news.hpp  option.hpp  stock.hpp  websocket.hpp
include/alpaca/trading/: client.hpp  enums.hpp  models.hpp  order_serialization.hpp  requests.hpp  stream.hpp
src/alpaca/broker/: client.cpp  enums.cpp
src/alpaca/core/: config.cpp  dotenv.cpp  http_transport.cpp  json.cpp
src/alpaca/core/http/: beast_transport.cpp
src/alpaca/data/: client.cpp
src/alpaca/data/live/: crypto.cpp  news.cpp  option.cpp  stock.cpp  websocket.cpp
src/alpaca/trading/: client.cpp  stream.cpp
tests/integration/: test_trading_live.cpp
tests/unit/: test_broker_assets_orders.cpp  test_broker_corporate_actions.cpp  test_broker_events.cpp  test_broker_journals.cpp  test_broker_transfers.cpp  test_config.cpp  test_data_corporate_actions.cpp  test_data_crypto_bars.cpp  test_data_crypto_latest.cpp  test_data_crypto_latest_orderbooks.cpp  test_data_crypto_quotes.cpp  test_data_crypto_snapshots.cpp  test_data_crypto_trades.cpp  test_data_latest_bars.cpp  test_data_latest_quotes.cpp  test_data_latest_trades.cpp  test_data_latest_trades_reverse.cpp  test_data_news.cpp  test_data_option_meta_exchanges.cpp  test_data_options.cpp  test_data_raw_endpoints.cpp  test_data_screener.cpp  test_data_snapshots.cpp  test_data_stock_bars.cpp  test_data_stock_quotes.cpp  test_data_stock_trades.cpp  test_trading_account.cpp  test_trading_activities.cpp  test_trading_assets.cpp  test_trading_calendar.cpp  test_trading_client.cpp  test_trading_positions.cpp  test_trading_transfers.cpp  test_trading_watchlists.cpp
